crates/alder-parse/src/snapshots/alder_parse__import__tests__import_simple.snap
---
source: crates/alder-parse/src/import.rs
description: "Code:\n\nimport Foo\n"
---
Import {
    import: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 11,
            },
        },
        value: "Foo",
    },
    alias: None,
    exposing: Explicit(
        [],
    ),
}
