crates/alder-parse/src/snapshots/alder_parse__import__tests__import_with_alias.snap
---
source: crates/alder-parse/src/import.rs
description: "Code:\n\nimport Json.Decode as Decode\n"
---
Import {
    import: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 8,
            },
            end: Position {
                line: 1,
                column: 19,
            },
        },
        value: "Json.Decode",
    },
    alias: Some(
        "Decode",
    ),
    exposing: Explicit(
        [],
    ),
}
